# Pasqal_Hackathon_Feb25_Team_07

./: README.md  config_ed_uc_copy.py  ed_quantum.py  ed_quantum_copy.py  pyproject.toml  qnn.ipynb  quantum_eda.ipynb  uc_classical_clean.py
data/: classical_1000_scenarios_gens_3.csv
