[project]
name = "opf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black-nb>=0.7",
    "jupyter-black>=0.4.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "wandb>=0.19.6",
]
